Bad decision, back back back!

--- a/wsgiadmin/templates/boxes.html
+++ b/wsgiadmin/templates/boxes.html
@@ -23,6 +23,7 @@
     <hr>
 
     {% for domain in object_list %}
+    {% if domain.boxes %}
     <table class="table table-striped">
         <thead>
             <tr>
@@ -48,5 +49,6 @@
             {% endfor %}
         </tbody>
     </table>
+    {% endif %}
     {% endfor %}
 {% endblock %}
