--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block header %}
-    <div class="navbar navbar-fixed-top"><!-- navbar-inverse -->
+    <div class="navbar navbar-inverse navbar-fixed-top"><!-- navbar-inverse -->
         <div class="navbar-inner">
             <div class="container-fluid">
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
