--- a/wsgiadmin/templates/dns/editor.html
+++ b/wsgiadmin/templates/dns/editor.html
@@ -11,6 +11,10 @@
 
     <h3>{% trans "Records for " %}{{ domain.name }}</h3>
 
+    <p><strong>{% trans "Default TTL for this domain" %}:</strong> {{ domain.ttl }}s</p>
+    
+    <p><a href="{% url dns_record_editor pk=domain.id %}" class="btn btn-primary">{% trans "New record" %}</a></p>
+
     <table class="table table-striped">
         <thead>
         <tr>
@@ -28,12 +32,12 @@
                 <tr data="{{ record.id }}" class="dns_record">
                     <td>{{ record.name }}</td>
                     <td>{{ record.record_type }}</td>
-                    <td>{{ record.ttl }}</td>
+                    <td>{{ record.ttl|default_if_none:"--" }}</td>
                     <td>{{ record.prio|default_if_none:"--" }}</td>
                     <td>{{ record.value }}</td>
                     <td class="list_actions">
-                        <a href="{% url dns_record_editor pk=domain.id record_pk=record.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Update" %}</a>
-                        <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url dns_rm_record %}?record_pk={{ record.id }}';}" class="btn btn-danger"><i class="icon-remove icon-white"></i> {% trans "Delete" %}</a>
+                        <a href="{% url dns_record_editor pk=domain.id record_pk=record.id %}" class="btn btn-warning btn-mini"><i class="icon-edit icon-white"></i> {% trans "Update" %}</a>
+                        <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url dns_rm_record %}?record_pk={{ record.id }}';}" class="btn btn-danger btn-mini"><i class="icon-remove icon-white"></i> {% trans "Delete" %}</a>
                     </td>
                 </tr>
             {% endfor %}
