--- a/wsgiadmin/templates/boxes.html
+++ b/wsgiadmin/templates/boxes.html
@@ -22,31 +22,24 @@
     </p>
     <hr>
 
-    {% for domain in object_list %}
     <table class="table table-striped">
-        <thead>
+        {% for domain in object_list %}
             <tr>
-                <th colspan="2" class="text18bold">{% trans "Domain" %} {{ domain.name }} <a href="#a" class="btn btn-mini btn-danger" onclick="if(confirm('Are you sure? This delete all mailboxes under this domain.')) document.location='{% url email_domain_delete %}?domain_pk={{ domain.id }}';"><i class="icon-remove icon-white"></i></a></th>
+                <th>{% trans "Domain" %} {{ domain.name }}</th>
+                <td><a href="#a" class="btn btn-mini btn-danger" onclick="if(confirm('{% trans "Are you sure? This delete all mailboxes under this domain." %}')) document.location='{% url email_domain_delete %}?domain_pk={{ domain.id }}';"><i class="icon-remove icon-white"></i> Delete whole domain</a></td>
             </tr>
-        </thead>
-        <tbody id="objects_list">
             {% for email in domain.boxes %}
                 <tr>
                     <td>{{ email.login }}@{{ email.domain.name }}</td>
                     <td>
-                        <ul class="akce">
-                        <li>
-                            <a href="{% url wsgiadmin.emails.views.changePasswdBox email.id %}" class="btn btn-warning">{% trans "Change password" %}</a>
-                        </li>
-                        <li class="smazat">
-                            <a href="#a" class="btn btn-danger" onclick="if(confirm('{% trans "Are you sure?" %}')) document.location='{% url mailbox_remove %}?pk={{ email.id }}';">{% trans "Delete" %}</a>
-                        </li>
-                        </ul>
-                        <span id="removed_{{ email.id }}" class="info"></span>
+                        <a href="{% url wsgiadmin.emails.views.changePasswdBox email.id %}" class="btn btn-warning btn-mini">{% trans "Change password" %}</a>
+                        <a href="#a" class="btn btn-danger btn-mini" onclick="if(confirm('{% trans "Are you sure?" %}')) document.location='{% url mailbox_remove %}?pk={{ email.id }}';">{% trans "Delete" %}</a>
                     </td>
                 </tr>
             {% endfor %}
-        </tbody>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
+        {% endfor %}
     </table>
-    {% endfor %}
 {% endblock %}
