NoVNC implemented, basic libvirt support integrated

--- a/wsgiadmin/templates/virt/list.html
+++ b/wsgiadmin/templates/virt/list.html
@@ -24,7 +24,7 @@
                     <td>{{ vm.created }}</td>
                     <td>{{ vm.name }}</td>
                     <td class="list_actions">
-                        <a href="" class="btn btn-info btn-mini"><i class="icon-info-sign icon-white"></i> {% trans "Info" %}</a>
+                        <a href="{% url virt_summary pk=vm.id %}" class="btn btn-info btn-mini"><i class="icon-info-sign icon-white"></i> {% trans "Info" %}</a>
                         <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location='';}" class="btn btn-danger btn-mini"><i class="icon-remove icon-white"></i> {% trans "Delete" %}</a>
                     </td>
                 </tr>
