--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -4,7 +4,7 @@
 {% block header %}
     <div class="navbar navbar-inverse navbar-fixed-top"><!-- navbar-inverse -->
         <div class="navbar-inner">
-            <div class="container-fluid">
+            <div class="container">
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
