--- a/wsgiadmin/templates/form.html
+++ b/wsgiadmin/templates/form.html
@@ -6,7 +6,7 @@
 {% block header %}
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container">
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
