Not complete, but it creates virtual machines now

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -220,7 +220,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="{% url virt_create %}"><i class="icon-plus"></i> {% trans "New virtual machine" %}</a>
+                            <a href="{% url virt_new %}"><i class="icon-plus"></i> {% trans "New virtual machine" %}</a>
                         </li>
                     {% endif %}
                     {% if menu_active == "dbs" %}
